finished with report

--- a/assignment_01/code/Blending.ipynb
+++ b/assignment_01/code/Blending.ipynb
@@ -7,7 +7,9 @@
     "# Assignment 1 - Blending\n",
     "\n",
     "Name: Nalet Meinen<br>\n",
-    "Matriculation number: 13-463-955"
+    "Matriculation number: 13-463-955\n",
+    "\n",
+    "CAUTION: This was made with Pyhton 3.8"
    ]
   },
   {
@@ -31,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This part is for displaying a status bar.\n",
     "import time, sys\n",
     "from IPython.display import clear_output\n",
     "\n",
@@ -83,6 +86,8 @@
    "source": [
     "b = array(Image.open('monalisa.png')) / 256\n",
     "f = array(Image.open('putin.jpg')) / 256\n",
+    "#b = array(Image.open('queen.png')) / 256\n",
+    "#f = array(Image.open('trump.jpg')) / 256\n",
     "\n",
     "# head location of Mona and Putin\n",
     "m = [83, 45, 166, 139]\n",
@@ -105,7 +110,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -150,9 +157,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def E_AB(u, b, f, omega, lmbda):\n",
+    "def energy(u, b, f, omega, lmbda):\n",
     "\n",
-    "    m, n, l = shape(b)\n",
+    "    m, n, l = b.shape\n",
     "    sum1 = zeros(l)\n",
     "    sum2 = zeros(l)\n",
     "\n",
@@ -169,11 +176,12 @@
     "    return sum(sum1 + lmbda*sum2)\n",
     "\n",
     "\n",
-    "def GD_E(u, b, f, omega, lmbda):\n",
+    "def GD_energy(u, b, f, omega, lmbda):\n",
     "\n",
-    "    m, n, l = shape(b)\n",
+    "    m, n, l = b.shape\n",
     "    grad = zeros((m, n, l))\n",
     "    \n",
+    "    #approx kernel for convolution\n",
     "    kernel = array([[0, -1, 0], [-1, 4, -1], [0, -1, 0]])\n",
     "\n",
     "    for k in arange(0, l):\n",
@@ -206,7 +214,7 @@
     "    :returns u: blended image of size (M, N, 3)\n",
     "    \"\"\"\n",
     "\n",
-    "    m, n, l = shape(b)\n",
+    "    m, n, l = b.shape\n",
     "    u = b.copy()\n",
     "    s_u = []\n",
     "\n",
@@ -216,7 +224,7 @@
     "    E = []  # value of the energy function\n",
     "\n",
     "    while err_E > 0.01:  # until the gradient is close enough to zero\n",
-    "        grad_E = GD_E(u, b, f, omega, lmbda)\n",
+    "        grad_E = GD_energy(u, b, f, omega, lmbda)\n",
     "        clear_output(wait = True)\n",
     "        print(\"Iteration:\",len(E))\n",
     "        if len(E) == 40 or len(E) == 80 or len(E) == 120:\n",
@@ -224,7 +232,7 @@
     "            clip(s_u[-1][0], 0, 255, s_u[-1][0])\n",
     "            \n",
     "        err_E = max(grad_E.flatten('F'))\n",
-    "        E.append(E_AB(u, b, f, omega, lmbda))\n",
+    "        E.append(energy(u, b, f, omega, lmbda))\n",
     "\n",
     "        for k in arange(0, l):\n",
     "            u[:, :, k] = u[:, :, k] - eps * grad_E[:, :, k]\n",
@@ -249,7 +257,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b5b7937ec8>]"
+       "[<matplotlib.lines.Line2D at 0x1b0f8d542c8>]"
       ]
      },
      "execution_count": 7,
@@ -307,7 +315,7 @@
    ],
    "source": [
     "# blend\n",
-    "lmbda = 2  # change\n",
+    "lmbda = 2#/100  # change\n",
     "u, E, s_u = GD(f2, b, omega, lmbda)\n",
     "\n",
     "# display\n",
@@ -374,15 +382,15 @@
     "    \"\"\"\n",
     "    u = b.copy()\n",
     "    s_u = []\n",
-    "    m, n, l = shape(b)\n",
+    "    m, n, l = b.shape\n",
     "    A = zeros((m, n, l))\n",
     "    n_iterations = 200\n",
     "    E = []\n",
     "\n",
     "    for s in range(n_iterations):\n",
     "\n",
-    "        grad_E = GD_E(u, b, f, omega, lmbda)\n",
-    "        E.append(E_AB(u, b, f, omega, lmbda))\n",
+    "        grad_E = GD_energy(u, b, f, omega, lmbda)\n",
+    "        E.append(energy(u, b, f, omega, lmbda))\n",
     "        update_progress(s / n_iterations)\n",
     "        \n",
     "        if len(E) == round(n_iterations/4) or len(E) == round((n_iterations/4)*2) or len(E) == round((n_iterations/4)*3):\n",
@@ -393,6 +401,7 @@
     "            t = u[:, :, i]\n",
     "            t_ = sparse.csr_matrix(t.flatten('F'))\n",
     "\n",
+    "            #temporary fix for hessian matrix with custom coefficients\n",
     "            ht1 = reshape(t_ * hessian_matrix(t, [2, 0, 0, 0, 0], lmbda),\n",
     "                          (m, n), order=\"F\").toarray()            \n",
     "            ht2 = reshape(t_ * hessian_matrix(t, [8, -2, -2, -2, -2], lmbda),\n",
@@ -418,6 +427,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
+      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
       "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
     },
@@ -429,17 +440,9 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b5b9cd5708>]"
+       "[<matplotlib.lines.Line2D at 0x1b0fa7cb248>]"
       ]
      },
      "execution_count": 10,
@@ -497,7 +500,7 @@
    ],
    "source": [
     "# blend\n",
-    "lmbda = 5  # change \n",
+    "lmbda = 5#/100  # change \n",
     "u, E, s_u = LGS(f2, b, omega, lmbda)\n",
     "\n",
     "# display\n",
@@ -550,15 +553,15 @@
     "\n",
     "    u = b.copy()\n",
     "    s_u = []\n",
-    "    m, n, l = shape(b)\n",
+    "    m, n, l = b.shape\n",
     "    A = zeros((m, n, l))\n",
     "    c = zeros((m, n, l))\n",
     "    n_iterations = 200\n",
     "    E = []\n",
     "\n",
     "    for s in range(n_iterations):\n",
-    "        grad_E = GD_E(u, b, f, omega, lmbda)\n",
-    "        E.append(E_AB(u, b, f, omega, lmbda))\n",
+    "        grad_E = GD_energy(u, b, f, omega, lmbda)\n",
+    "        E.append(energy(u, b, f, omega, lmbda))\n",
     "        update_progress(s / n_iterations)\n",
     "        if len(E) == round(n_iterations/4) or len(E) == round((n_iterations/4)*2) or len(E) == round((n_iterations/4)*3):\n",
     "            s_u.append((u.copy(),len(E)))\n",
@@ -567,7 +570,8 @@
     "        for i in range(l):\n",
     "            t = u[:, :, i]\n",
     "            t_ = sparse.csr_matrix(t.flatten('F'))\n",
-    "\n",
+    "            \n",
+    "            #temporary fix for hessian matrix with custom coefficients\n",
     "            ht1 = reshape(t_ * hessian_matrix(t, [2, 0, 0, 0, 0], lmbda),\n",
     "                          (m, n), order=\"F\").toarray()\n",
     "            ht2 = reshape(t_ * hessian_matrix(t, [8, -2, -2, -2, -2], lmbda),\n",
@@ -615,7 +619,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b5bb5d2388>]"
+       "[<matplotlib.lines.Line2D at 0x1b0fc6e1848>]"
       ]
      },
      "execution_count": 12,
@@ -673,7 +677,7 @@
    ],
    "source": [
     "# blend\n",
-    "lmbda = 2  # change \n",
+    "lmbda = 2#/100  # change \n",
     "u, E, s_u = LSOR(f2, b, omega, lmbda)\n",
     "\n",
     "# display\n",
